[bugfix] Fix add group input button alignment

--- a/src/main/resources/assets/scss/stresstime.scss
+++ b/src/main/resources/assets/scss/stresstime.scss
@@ -723,7 +723,7 @@ $delete-bg: #C41E1E;
 }
 
 .st-input-button  {
-    padding-top: 5px;
+    padding-top: 6px;
     padding-bottom: 7px;
 }
 
